--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <h3>Did the number of incidents increase?</h3>
                     <p>... or decrease?</p>
                     <div id=hideshow class="box slideleft plotbox">
-                        <embed class='plot' src="scripts/plots/plot_gender_age_division_type.html">
+                        <embed class='plot' src="scripts/plots/plot_incidents_troughout.html">
                     </div>
                 </div>
                 <div class='right'>
                     <div class='buttoncontainer'>
                             
-                            <button class='btn' id="toggle">I am so sorry but I really don't care about precision just give me the answer</button>
+                            <button class='btn' id="toggle">I am so sorry I don't understand this graph please show me a barchart</button>
                             <div id=showhide>
                                     <p> The number of incidents increased</p>
                                     <embed class='plotcontain' src="scripts/plots/plot_barchart_years2.html">
