--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <h3>There were 240.000 gun related incidents from 2013 untill today</h3>
                 <div id='map_total_incidents_container'>
                     <embed class='map' src="scripts/plots/gmap_total_incidents.html">
+                    <!-- <img  class='map' style='opacity: 0.7' src="scripts/images/gmap_png_2.png" alt="gmap"> -->
                 </div>
             </div>
 
@@ -73,7 +74,7 @@
                 </div>
             </div>
             <div class='newsubject' >1. DIFFERENCES BETWEEN STATES</div>
-            <div id="thirdcontainer" >
+            <div id="thirdcontainer" style='text-align: center'>
 
                 <h3 style='margin-left: 30%'>So the number of incidents increased... overall?</h3>
                 <h1 style='margin-left: 30%'>THERE SEEMS TO BE A CLUSTER</h1>
@@ -92,18 +93,19 @@
         <div class='container' style='margin-top: 0'>
             <div id="secondcontainer">
                 <div class='left'>
-                    <h1 class='white'>Why would you shoot?</h3>
-                    <p class='white'> the most common motivations for an incident </p>
+                    <h1 class='white'>When do we shoot?</h3>
+                    <p class='white'> The days best to stay indoors </p>
                     <div class="box slideleft plotbox">
-                        <img src="scripts/plots/plot_type_incident.png" alt="plots/plot incident types" style='width: 100%'>
+                        <embed class='plotcontain' style = 'opacity:0.8' src="scripts/plots/plot_holidays.html">
+                        <!-- <img src="scripts/plots/plot_holidays.html.png" alt="plots/plot incident types" style='width: 100%'> -->
                     </div>
                 </div>
                 <div class='right' style='height: 50% !important'>
                     <div class='buttoncontainer'>
-                            <button class='btn' id="toggle2">What does this mean?</button>
+                            <button class='btn' id="toggle2">days to go out and have fun</button>
                             <div id=showhide2>
-                                    <p class='white'> There was an increase in Armed Robbery incidents over the years </p>
-                                    <p class='white' style='size: 1rem'> NB: deze grafiek is volgens mij op onze tekening een andere, alleen kan ff jonas zn handschrift niet meer lezen </p>
+                                    <p class='white'> These are the days with the most suicedes: </p>
+                                    <embed class='plotcontain' style = 'opacity:0.8' src="scripts/plots/plot_holidays.html">
                             </div>
                     </div>         
                 </div>
@@ -115,11 +117,10 @@
                         <p class='white' style='margin-left: 30%'> sometimes Mr. Officer was a victim, sometimes a suspect </p>
                         <div class="box slideleft plotbox">
                             <div id='map_police_container'>
-                                <embed class='map' src="scripts/plots/gmap_police.html">
+                                <embed class='map' src="scripts/plots/gmap_police_2.html">
                             </div>
                     </div>
                 </div>
-
                 <div class='leftpolice' >
                         <div class='buttoncontainer' style='margin-top: 20rem !important'>
                             <button class='btn' id="toggle3">Tell me more</button>
@@ -129,24 +130,47 @@
                         </div>         
                     </div>
                 </div>
+            </div>
 
-                <div id="secondcontainer">
-                        <div class='left'>
-                            <h1 class='white'>The Suspect-Victim ratio is also evenly distributed</h3>
-                            <p class='white'> .....which is strange, to say the least </p>
-                            <div class="box slideleft plotbox">
-                                <img src="scripts/plots/plot_type_participant.png" alt="plot participant types" style='width: 100%'>
-                            </div>
+            <div id="secondcontainer">
+                <div class='left' style='overflow: hidden'>
+                    <h1 class='white'> What did we do to the police ?</h3>
+                    <!-- <p class='white'> :-( </p> -->
+                    <div class="box slideleft plotbox">
+                        <div id='map_police_container'>
+                            <embed class='map' src="scripts/plots/gmap_police_suspect_filled_radiobuttons.html">
                         </div>
-                        <div class='right' style='height: 50% !important'>
-                            <div class='buttoncontainer'>
-                                    <button class='btn' id="toggle4">Give me a conclusion</button>
-                                    <div id=showhide4>
-                                        <p class='white'> According to the dataset the number of victims is almost equal to the number of suspects. This is strange, for this means that every case with an arrested shooter with 5 victims, there is also a case with 5 victims and no shooter arrested, or 5 cases with one victim and no one arrested, etc. </p>
-                                    </div>
-                            </div>         
-                        </div>
+                    </div>
                 </div>
+                <div class='right' style='height: 50% !important;'>
+                    <div class='buttoncontainer'>
+                            <button class='btn' id="toggle8"> Tell me more about ages and police brutality</button>
+                            <div id=showhide8>
+                                    <p class='white'> Civilians who shoot at an officer are above average of age </p>
+                                    <embed class='plotcontain' style = 'opacity:0.8' src="scripts/plots/plot_barchart_police.html">
+                            </div>
+                    </div>         
+                </div>
+            </div>
+
+
+            <div id="secondcontainer">
+                    <div class='left'>
+                        <h1 class='white'>The Suspect-Victim ratio is also evenly distributed</h3>
+                        <p class='white'> .....which is strange, to say the least </p>
+                        <div class="box slideleft plotbox">
+                            <img src="scripts/plots/plot_type_participant.png" alt="plot participant types" style='width: 100%'>
+                        </div>
+                    </div>
+                    <div class='right' style='height: 50% !important'>
+                        <div class='buttoncontainer'>
+                                <button class='btn' id="toggle4">Give me a conclusion</button>
+                                <div id=showhide4>
+                                    <p class='white'> According to the dataset the number of victims is almost equal to the number of suspects. This is strange, for this means that every case with an arrested shooter with 5 victims, there is also a case with 5 victims and no shooter arrested, or 5 cases with one victim and no one arrested, etc. </p>
+                                </div>
+                        </div>         
+                    </div>
+            </div>
             </div>
 
             <div class='newsubject white'>3. DISTRIBUTION OF THE KILLER/VICTIM RATIO</div>
@@ -201,7 +225,7 @@
                         <div class='buttoncontainer' style='height: 45rem !important'>
                                 <button class='btn' style='margin-top: 5rem' id="toggle7"> Having a daughter is also not the safest option </button>
                                 <div id=showhide7>
-                                        <p class='blacktext'> Women are  more likely to be a victim </p>
+                                        <p class='blacktext'> Women are  more likely to be a victim than men</p>
                                         <embed class='plot' src="scripts/plots/plot_barchart_male_female_verhouding.html" style='height: 120%'>
                                 </div>
                         </div>
@@ -336,6 +360,15 @@
                     $("#toggle7").click(function(){
                         $("#showhide7").fadeToggle();
                     });
+                    $("#toggle8").click(function(){
+                        $("#showhide8").fadeToggle();
+                    });
+                    $("#toggle9").click(function(){
+                        $("#showhide9").fadeToggle();
+                    });
+                    $("#toggle10").click(function(){
+                        $("#showhide10").fadeToggle();
+                    });
                 });
         </script>
 
@@ -361,6 +394,7 @@
                 });
             });
         </script>
+
 
     </body>
 
